--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,8 +3,6 @@ name: Deploy FullStack App
 on:
   push:
     branches: [main]
-  pull_request:
-    branches: [main]
 
 env:
   DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
@@ -28,22 +26,27 @@ jobs:
             frontend/package-lock.json
 
       - name: Install Backend Dependencies
-        run: npm install
+        run: |
+          cd backend
+          npm install
         working-directory: ./backend
 
       - name: Install Frontend Dependencies
-        run: npm install
+        run: |
+          cd frontend
+          npm install
         working-directory: ./frontend
 
       - name: Build Frontend
-        run: npm run build
+        run: |
+          cd frontend
+          npm run build
         working-directory: ./frontend
 
   build-and-push:
     name: Build and Push Docker Images
     runs-on: ubuntu-latest
     needs: test
-    if: github.ref == 'refs/heads/main'
     
     steps:
       - name: Checkout code
@@ -82,7 +85,6 @@ jobs:
     name: Deploy to Oracle Cloud
     runs-on: ubuntu-latest
     needs: build-and-push
-    if: github.ref == 'refs/heads/main'
     
     steps:
       - name: Checkout code
