--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,34 +20,31 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '18'
+          cache: 'npm'
 
-      - name: Check repository structure
+      - name: Install Backend Dependencies
         run: |
-          echo "📁 Estructura del repositorio:"
-          find . -type f -name "*.json" -o -name "*.js" -o -name "Dockerfile" | head -20
-          echo ""
-          echo "📦 Archivos package.json encontrados:"
-          find . -name "package.json"
+          cd backend
+          npm install
+        if: contains(github.event.head_commit.message, 'backend') || !contains(github.event.head_commit.message, 'skip-backend')
 
-      - name: Install dependencies if package.json exists
+      - name: Install Frontend Dependencies
         run: |
-          if [ -f "package.json" ]; then
-            echo "📦 Instalando dependencias desde raíz"
-            npm install
-          else
-            echo "📦 No se encontró package.json en raíz"
-          fi
+          cd frontend
+          npm install
+        if: contains(github.event.head_commit.message, 'frontend') || !contains(github.event.head_commit.message, 'skip-frontend')
 
-      - name: Build if build script exists
+      - name: Build Frontend
         run: |
-          if [ -f "package.json" ]; then
-            npx --yes vite build || echo "Build falló o no es necesario"
-          fi
+          cd frontend
+          npm run build
+        if: contains(github.event.head_commit.message, 'frontend') || !contains(github.event.head_commit.message, 'skip-frontend')
 
   build-and-push:
     name: Build and Push Docker Images
     runs-on: ubuntu-latest
     needs: test
+    if: github.ref == 'refs/heads/main'
     
     steps:
       - name: Checkout code
@@ -62,37 +59,31 @@ jobs:
           username: ${{ env.DOCKERHUB_USERNAME }}
           password: ${{ env.DOCKERHUB_TOKEN }}
 
-      - name: Build simple Docker images
-        run: |
-          echo "🐳 Construyendo imágenes Docker básicas..."
-          
-          # Backend básico
-          cat > Dockerfile.backend << 'EOF'
-          FROM node:18-alpine
-          WORKDIR /app
-          COPY . .
-          RUN npm install express cors
-          EXPOSE 3000
-          CMD ["node", "-e", "const express=require('express');const app=express();app.use(require('cors')());app.get('/health',(req,res)=>res.json({status:'OK'}));app.listen(3000)"]
-          EOF
-          
-          # Frontend básico
-          cat > Dockerfile.frontend << 'EOF'
-          FROM nginx:alpine
-          COPY . /usr/share/nginx/html/
-          RUN echo '<html><body><h1>Frontend Funcionando</h1></body></html>' > /usr/share/nginx/html/index.html
-          EXPOSE 80
-          EOF
-          
-          docker build -t ${{ env.DOCKERHUB_USERNAME }}/app-backend:latest -f Dockerfile.backend .
-          docker build -t ${{ env.DOCKERHUB_USERNAME }}/app-frontend:latest -f Dockerfile.frontend .
-          docker push ${{ env.DOCKERHUB_USERNAME }}/app-backend:latest
-          docker push ${{ env.DOCKERHUB_USERNAME }}/app-frontend:latest
+      - name: Build and Push Backend
+        uses: docker/build-push-action@v5
+        with:
+          context: ./backend
+          file: ./backend/Dockerfile
+          push: true
+          tags: |
+            ${{ env.DOCKERHUB_USERNAME }}/app-backend:latest
+            ${{ env.DOCKERHUB_USERNAME }}/app-backend:${{ github.sha }}
+
+      - name: Build and Push Frontend
+        uses: docker/build-push-action@v5
+        with:
+          context: ./frontend
+          file: ./frontend/Dockerfile
+          push: true
+          tags: |
+            ${{ env.DOCKERHUB_USERNAME }}/app-frontend:latest
+            ${{ env.DOCKERHUB_USERNAME }}/app-frontend:${{ github.sha }}
 
   deploy:
     name: Deploy to Oracle Cloud
     runs-on: ubuntu-latest
     needs: build-and-push
+    if: github.ref == 'refs/heads/main'
     
     steps:
       - name: Checkout code
